...
                android:text="@string/overview"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_40"
                app:fontFamily="sans-serif-medium" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:theme="@style/Theme.MyMovieRef" />

...

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite_button"
        android:src="@drawable/ic_baseline_bookmarks_24"
...
