<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/myFav"
        android:icon="@drawable/ic_baseline_bookmarks_24"
        android:title="@string/share"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
</menu>